# src/liveChat/server/docs/swagger.yaml
@@ -7,6 +7,8 @@ definitions:
     type: object
   model.UserRequestData:
     properties:
+      id:
+        type: integer
       password:
         type: string
       repassword:
@@ -60,6 +62,38 @@ paths:
           schema:
             $ref: '#/definitions/model.ResponseData'
       summary: 删除用户
+      tags:
+      - 用户模块
+  /user/updateUser:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户更新信息
+        in: body
+        name: user
+        schema:
+          $ref: '#/definitions/model.UserRequestData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+      summary: 用户更新
       tags:
       - 用户模块
   /user/userRegistry:
